[package]
name = "warp-test"
version = "0.1.0"
authors = ["Carlos Valiente <carlo@pepelabs.net>"]
edition = "2018"

[dependencies]
env_logger = { "version" = "0.7" }
nix = { version = "0.17" }
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }
warp = { version = "0.2" }
