[package]
name = "warp-test"
version = "0.1.0"
authors = ["Carlos Valiente <carlo@pepelabs.net>"]
edition = "2018"

[dependencies]
tokio = { "version" = "0.2.11", features = ["full"] }
env_logger = { "version" = "0.7.1" }
nix = { version = "0.17" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = { "version" = "0.2.1" }
